...
        Spacer(modifier = Modifier.height(CacheItSpacing.xl))

        val fieldsEnabled = uiState !is AuthUiState.Loading

        OutlinedTextField(name, { name = it }, enabled = fieldsEnabled,
            label = { Text(stringResource(R.string.registration_accountholder)) },
            modifier = Modifier.fillMaxWidth().padding(top = CacheItSpacing.lg).testTag("registration_name_field"),
            singleLine = true)

        OutlinedTextField(email, { email = it }, enabled = fieldsEnabled,
            label = { Text(stringResource(R.string.registration_email)) },
            modifier = Modifier.fillMaxWidth().padding(top = CacheItSpacing.sm).testTag("registration_email_field"),
            singleLine = true)

        OutlinedTextField(username, { username = it }, enabled = fieldsEnabled,
            label = { Text(stringResource(R.string.registration_username)) },
            modifier = Modifier.fillMaxWidth().padding(top = CacheItSpacing.sm).testTag("registration_username_field"),
            singleLine = true)

        PasswordField(password, { password = it }, enabled = fieldsEnabled,
            label = (stringResource(R.string.registration_password)),
            modifier = Modifier.fillMaxWidth().padding(top = CacheItSpacing.sm).testTag("registration_password_field"))

        PasswordField(confirmPassword, { confirmPassword = it }, enabled = fieldsEnabled,
            label = stringResource(R.string.registration_password_confirm) ,
            modifier = Modifier.fillMaxWidth().padding(top = CacheItSpacing.sm).testTag("registration_confirm_password_field"))

        Text(stringResource(R.string.registration_password_note), style = TypeCaption,
            color = MaterialTheme.colorScheme.onPrimary)

        Button(
            onClick = { viewModel.submit(name, username, email, password, confirmPassword) },
            enabled = fieldsEnabled,
            modifier = Modifier.fillMaxWidth().padding(top = CacheItSpacing.xl).testTag("registration_submit_button"),
        ) {
            Text(stringResource(R.string.registration_request))
        }

        TextButton(onClick = onNavigateToLogin) {
            Text(stringResource(R.string.registration_account_exists))
...
