...
    <string name="login_password">Password</string>
    <string name="registration_request">Let\'s get started</string>
    <string name="login_request">Log in</string>
    <string name="registration_account_exists">Already have an account? Press here</string>
    <string name="login_no_account">Don\'t have an account yet? Press here</string>
    <string name="registration_password_confirm">Confirm Password</string>
    <string name="note_view_history">View note history</string>
    <string name="note_info_drawing_true">Note contains a drawing</string>
    <string name="note_drawing_locked">Locked for drawing on another device</string>
    <string name="note_edit_title">Edit note</string>
    <string name="navigation_back">Back</string>
    <string name="note_edit_note_not_found_offline">This note couldn\'t be found.</string>
    <string name="note_edit_note_title">Title</string>
    <string name="saving_in_progress">Saving…</string>
    <string name="save">Save</string>
    <string name="note_list_title">Notes</string>
    <string name="note_list_empty_notice">No notes added yet.</string>
    <string name="note_decrypt_failure">Failed to decrypt %1$d notes</string>
    <string name="error_screen_title">Error</string>
    <string name="error_screen_body">An unknown error has occurred</string>
    <string name="ok">OK</string>
    <string name="note_versions_none_found">No earlier versions yet.</string>
    <string name="note_version_current">Current version</string>
    <string name="note_version_has_drawing">Contains a drawing</string>
    <string name="note_version_restore_this">Restore this version</string>
    <string name="note_version_restore_in_progress">Restoring…</string>
    <string name="cancel">Cancel</string>
    <string name="note_version_restore_unconfirmed">Couldn\'t confirm the restore - check shortly</string>
    <string name="snackbar_error">Error: %1$s.userMessage</string>
...
